--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "socket.io": "^1.3.6"
   },
   "devDependencies": {
-    "bower": "^1.4.1"
+    "bower": "^1.4.1",
+    "mocha": "^2.2.5",
+    "should": "^7.0.4"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
