--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "1-built-ins.js",
   "dependencies": {
+    "cluster": "^0.7.7",
     "request": "^2.60.0",
     "socket.io": "^1.3.6"
   },
